--- a/ui5.yaml
+++ b/ui5.yaml
@@ -15,6 +15,10 @@ server:
             - /resources
             - /test-resources
           url: https://ui5.sap.com
+        backend:
+          - path: /Metrics
+            pathPrefix: /
+            destination: ALM-Metrics-Service
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
